test/analyzer/input_programs/invalid_programs/program23.tea
# Valid list iteration with for statement

for h in [1, 2, 3]:
  out(h)
end

# Valid map iteration with for statement

for i in {first: 1, second: 2, third: 3}:
  out(i)
end

# Valid set iteration with for statement

for j in <1, 2, 3, 4>:
  out(j)
end

# Valid string iteration with for statement

for k in "hello":
  for l in "goodbye":
    out(k)
    out(l)
  end
end

# Invalid integer iteration with for statement

for m in 7:
  out("This won't work")
end